Fixed responsive CSS, added z-index, changed some form values

--- a/power-coders-app/src/Components/App/App.css
+++ b/power-coders-app/src/Components/App/App.css
@@ -67,6 +67,7 @@
   justify-content: space-between;
   align-items: center;
   padding: 0 2%;
+  position: relative;
 }
 
 .Image {
