--- a/power-coders-app/src/Components/LowerSection/WellBeingForm/wellBeingForm.css
+++ b/power-coders-app/src/Components/LowerSection/WellBeingForm/wellBeingForm.css
@@ -1,7 +1,8 @@
 .wellbeing-form {
+    z-index: 1;
     position: absolute;
-    right: 1%;
-    top: 1%;
+    right: 0.5%;
+    bottom: 5%;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -11,13 +12,14 @@
     width: 20%;  
     border-radius: 5%;
     padding: 0 0 1% 0;
-    font-size: 1.1rem;
+    font-size: 1vw;
 }
 
 .wellbeing-form > h2 {
     color: #6989a7;
     padding: 0;
-    margin: 0 0 10% 0;   
+    margin: 0 0 10% 0;  
+    font-size: 2vw; 
 }
 
 .close {
@@ -30,8 +32,9 @@
 
 .close > button {
     color: #ff000080;
-    font-size: 2rem;
-    margin-right: 3%;
+    font-size: 1.6vw;
+    font-weight: bold;
+    margin-right: 4%;
     padding: 0;
     border:none;
     border-radius: 100%;
@@ -46,8 +49,8 @@
     background-color: #459869;
     color: #fff;
     border: 1px solid #000;
-    padding: 3% 8%;
-    font-size: 1.4rem;    
+    padding: 2% 6%;
+    font-size: 1.3vw;;    
     border-radius: 20px;
     font-weight: bolder;
     margin-bottom: 4%;
@@ -69,14 +72,16 @@
 
 /* Make input headings bold */
 
-legend {
+.wellbeingCheckText {
     font-weight: bold;
     padding-bottom: 5%;
+    font-size: 1.2vw;
 }
 
 .formInputContainer {
     margin-bottom: 10%;
     width: 100%;
+    font-size: 0.9vw ;
 }
 
 .formInputContainer > input, .formInputContainer > select {
@@ -92,4 +97,8 @@ fieldset > label:first-of-type {
 
 fieldset > label:last-of-type {
     margin-left: 2%;
+}
+
+fieldset > input {
+    margin-right: 2%;
 }
